--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cz-commit": "node ./node_modules/cz-customizable/standalone.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
-  "type": "module",
   "dependencies": {
     "fluent-ffmpeg": "^2.1.3"
+  },
+  "devDependencies": {
+    "cz-customizable": "^7.2.1",
+    "cz-git": "^1.9.4"
   }
 }
